# dive-into-deep-learning-sw

./: pyproject.toml
notebooks/pytorch/chapter_linear-classification/: environment-and-distribution-shift.ipynb  image-classification-dataset.ipynb  softmax-regression-concise.ipynb
notebooks/pytorch/chapter_linear-regression/: linear-regression-concise.ipynb  linear-regression-scratch.ipynb  linear-regression.ipynb  synthetic-regression-data.ipynb
notebooks/pytorch/chapter_multilayer-perceptrons/: dropout.ipynb  kaggle-house-price.ipynb  mlp-implementation.ipynb  numerical-stability-and-init.ipynb  submission.csv
notebooks/pytorch/chapter_preliminaries/: autograd.ipynb  calculus.ipynb  index.ipynb  linear-algebra.ipynb  ndarray.ipynb  pandas.ipynb  probability.ipynb
notebooks/tensorflow/chapter_preliminaries/: linear-algebra.ipynb
